--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "e2e": "ng e2e"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.801.2",
     "@angular/cli": "~8.1.0",
     "@angular/compiler-cli": "~8.1.0",
     "@angular/language-service": "~8.1.0",
