--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -4,22 +4,21 @@ on: [push]
 
 jobs:
   build:
-    name: Build
     runs-on: ubuntu-18.04
-    strategy:
-      matrix:
-        node_version: [10, 12]
 
     steps:
     - uses: actions/checkout@v1
-    - name: Use Node.js ${{ matrix.node_version }}
+    - name: Use Node.js 12.x
       uses: actions/setup-node@v1
       with:
-        version: ${{ matrix.node_version }}
-
-    - name: yarn install, yarn lint, yarn test, yarn build
-      run: |
-        yarn install
-        yarn lint
-        yarn test
-        yarn build
+        node-version: "12.x"
+    - name: Install dependencies
+      run: npm install
+    - name: Lint
+      run: npm run lint
+    - name: Build
+      run: npm run build -- --prod
+    - name: Test
+      run: npm test -- --configuration=ci
+    - name: E2E
+      run: npm run e2e -- --configuration=ci
