--- a/angular.json
+++ b/angular.json
@@ -78,6 +78,12 @@
               "**/node_modules/**"
             ]
           }
+        },
+        "test": {
+          "builder": "@angular-builders/jest:run",
+          "options": {
+            "configPath": "./jest.config.js"
+          }
         }
       }
     }
