--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -24,8 +24,8 @@ jobs:
       uses: codecov/codecov-action@v1.0.2
       with:
         token: ${{secrets.CODECOV_TOKEN}}
-         file: ./coverage.xml #optional
-         flags: unittests #optional
-         name: codecov-umbrella #optional
+        file: ./coverage.xml
+        flags: unittests
+        name: codecov-umbrella
 
 
