--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -19,12 +19,11 @@ jobs:
     - name: Build
       run: npm run build -- --prod
     - name: Test
-      run: npm run test:cov -- --configuration=ci
+      run: npm run test:cov
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1.0.2
       with:
         token: ${{secrets.CODECOV_TOKEN}}
-        file: ./coverage.xml
         flags: unittests
         name: codecov-umbrella
 
