--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@angular-builders/jest": "^8.2.0",
     "@angular-devkit/build-angular": "^0.801.2",
+    "@angular-devkit/build-ng-packagr": "~0.11.0",
     "@angular/cli": "~8.1.0",
     "@angular/compiler-cli": "~8.1.0",
     "@angular/language-service": "~8.1.0",
@@ -46,8 +47,11 @@
     "codelyzer": "~4.5.0",
     "jest": "^24.9.0",
     "jest-preset-angular": "^7.1.1",
+    "ng-packagr": "^4.2.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
+    "tsickle": ">=0.29.0",
+    "tslib": "^1.9.0",
     "tslint": "~5.11.0",
     "typescript": "~3.4.5"
   }
