--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/router": "8.1.2",
     "@nebular/eva-icons": "next",
     "@nebular/theme": "4.1.2",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "@ngxs/store": "3.4.3",
     "bootstrap": "4.3.1",
     "core-js": "2.6.9",
