--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": "./",
+    "baseUrl": "./src",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
@@ -19,6 +19,15 @@
       "dom"
     ],
     "paths": {
+      "@nba/core/*": [
+        "app/core/*"
+      ],
+      "@nba/shared/*": [
+        "app/shared/*"
+      ],
+      "@nba/features/*": [
+        "app/features/*"
+      ],
       "data": [
         "dist/data"
       ],
